# ELSA

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: bench_attn.py  bench_bwd.py  bench_full_model.py  bench_full_model_bwd.py  bench_timm_dropin.py  bench_timm_dropin_bwd.py  bwd_grad_correctness.py  full_model_bwd_min.py  full_model_graph.py
code/future_exp/: elsa_triton.py  elsa_triton_entry.py  sic_triton.py
code/stable/: __init__.py  _builder.py  _features.py  _features_fx.py  _manipulate.py  _registry.py  (+8 more)
docs/: FILE_GUIDE.md  FULL_REPORT_20260301.md  FULL_REPORT_20260301.zh-TW.md  RELEASE_NOTES_20260301.md  RELEASE_NOTES_20260301.zh-TW.md  REPRODUCIBILITY.md  REPRODUCIBILITY.zh-TW.md  RESULTS_A100.md  STATUS_MATRIX_20260301.md  STATUS_MATRIX_20260301.zh-TW.md  benchmark_summary.md  完整總報告_20260301_全實驗.md
elsa_ext_pack/: README.md  elsa.cpp  elsa_kernel.cu  setup.py
other/: README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md
scripts/: bench_attn_shape_fp32.py  bench_clean.sh  bench_elsa_precision_compare.py  bench_gated_deltanet_vs_elsa.py  bench_linear_attn_shared.py  bench_nystromformer_vs_elsa.py  bench_truefp32_vs_elsa_triton.py  benchmark_downstream_ft_cifar10.py  benchmark_model_throughput.py  benchmark_pure_attention_vit.py  benchmark_train_ft_matrix.py  run_benchmark.sh  run_matrix.sh  run_strict_coverage_matrix.py  run_swin_fp32_size_sweep.py  run_swin_sota_fused.py  run_vit_sota.py  spot_check.py  spot_check.sh  verify_2pass.py  verify_swin_elsa_exactness.py
tests/: test_attention.py  test_attention_bwd.py
(+16 files in other folders)
