[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elsa-twopass-clean"
version = "0.1.0"
description = "ELSA exact two-pass monoid attention with parallel scan (A100-validated)."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "triton",
]

[tool.setuptools.packages.find]
where = ["src"]
